# CppChatServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json  schema.sql
client/: CMakeLists.txt
client/src/: client.cpp  client.h  main.cpp
common/: CMakeLists.txt
common/proto/: chat.proto
common/src/: common.cpp
common/src/domain/: Message.h  Room.h  User.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/core/: Server.cpp  Server.h  SessionManager.cpp  SessionManager.h
server/src/data/: ConnectionPool.cpp  ConnectionPool.h  DataAccess.h  IMessageRepository.h  IRoomRepository.h  IUserRepository.h  MySQLMessageRepository.cpp  MySQLMessageRepository.h  MySQLRoomRepository.cpp  MySQLRoomRepository.h  MySQLUserRepository.cpp  MySQLUserRepository.h  SociTypeConversion.h
server/src/service/: AuthService.cpp  AuthService.h  MessageService.cpp  MessageService.h  RoomService.cpp  RoomService.h
server/src/session/: Session.cpp  Session.h
server/src/util/: ConfigManager.cpp  ConfigManager.h  Crypto.cpp  Crypto.h  TimeConvert.cpp  TimeConvert.h
tester/: CMakeLists.txt
tester/src/: main.cpp
